--- a/Quan_Ly_Thuoc/Quan_Ly_Thuoc.csproj
+++ b/Quan_Ly_Thuoc/Quan_Ly_Thuoc.csproj
@@ -65,11 +65,11 @@
     <Compile Include="Forms\Search\Search.Designer.cs">
       <DependentUpon>Search.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Function\FormHoaDon.cs">
+    <Compile Include="Forms\Function\FormHoaDonBan.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Function\FormHoaDon.Designer.cs">
-      <DependentUpon>FormHoaDon.cs</DependentUpon>
+    <Compile Include="Forms\Function\FormHoaDonBan.Designer.cs">
+      <DependentUpon>FormHoaDonBan.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\ChiTietHD.cs" />
     <Compile Include="Models\ChiTietHDB.cs" />
@@ -91,8 +91,8 @@
     <EmbeddedResource Include="Forms\Search\Search.resx">
       <DependentUpon>Search.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Function\FormHoaDon.resx">
-      <DependentUpon>FormHoaDon.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Function\FormHoaDonBan.resx">
+      <DependentUpon>FormHoaDonBan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
