--- a/Quan_Ly_Thuoc/Quan_Ly_Thuoc.csproj
+++ b/Quan_Ly_Thuoc/Quan_Ly_Thuoc.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Functions\FormChiTietHDB.resx">
       <DependentUpon>FormChiTietHDB.cs</DependentUpon>
