--- a/Quan_Ly_Thuoc/App.config
+++ b/Quan_Ly_Thuoc/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Quan_Ly_Thuoc.Properties.Settings.QL_ThuocConnectionString"
+            connectionString="Data Source=DESKTOP-U9CQUB1;Initial Catalog=QL_Thuoc;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
